tests/error/this_instance.gw
// [contains] keyword 'this' must be associated with object instance
class C {}
C.this;
